add better power menu

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -111,7 +111,7 @@ bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+e exec $HOME/.config/polybar/power_menu.sh
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -158,7 +158,6 @@ hide_edge_borders none
 
 gaps inner 4
 gaps outer 2 
-#smart_gaps on
 smart_borders no_gaps
 
 bindsym $mod+space exec albert show
