--- a/config/polybar/config
+++ b/config/polybar/config
@@ -17,9 +17,9 @@
 ;==========================================================
 
 [colors]
-surface = #2B2929
-on_surface = #F7F7F7
-primary = #e95420
+surface = ${xrdb:background}
+on_surface = ${xrdb:foreground}
+primary = ${xrdb:color1}
 
 alert = #FF0000
 
@@ -89,21 +89,21 @@ label-mode-foreground = #000
 label-mode-background = ${colors.primary}
 
 ; focused = Active workspace on focused monitor
-label-focused = %name%
+label-focused = %index%
 label-focused-background = ${colors.primary}
 label-focused-padding = 1
 
 ; unfocused = Inactive workspace on any monitor
-label-unfocused = %name%
+label-unfocused = %index%
 label-unfocused-padding = 1
 
 ; visible = Active workspace on unfocused monitor
-label-visible = %name%
+label-visible = %index%
 label-visible-background = ${self.label-focused-background}
 label-visible-padding = ${self.label-focused-padding}
 
 ; urgent = Workspace with urgency hint set
-label-urgent = %name%
+label-urgent = %index%
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 2
 
