--- a/config/i3/config
+++ b/config/i3/config
@@ -3,6 +3,7 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
 exec --no-startup-id xrdb -merge ~/.cache/wal/colors.Xresources
+exec --no-startup-id xrdb -merge ~/dotfiles/xscreensaver
 
 set $mod Mod4
 
@@ -75,45 +76,45 @@ bindsym $mod+a focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
-workspace 1 output HDMI-0
-workspace 2 output DVI-D-0
-workspace 3 output DP-5
-workspace 4 output HDMI-0
-workspace 5 output DVI-D-0
-workspace 6 output DP-5
-workspace 7 output HDMI-0
-workspace 8 output DVI-D-0
-workspace 9 output DP-5
-workspace 10 output DP-5
+workspace 1 output HDMI-1
+workspace 2 output DVI-D-1
+workspace 3 output DP-1
+workspace 4 output HDMI-1
+workspace 5 output DVI-D-1
+workspace 6 output DP-1
+workspace 7 output HDMI-1
+workspace 8 output DVI-D-1
+workspace 9 output DP-1
+workspace 10 output DP-1
 
 # switch to workspace
-bindsym $mod+1 workspace 1 output HDMI-0
-bindsym $mod+2 workspace 2 output DVI-D-0
-bindsym $mod+3 workspace 3 output DP-5
-bindsym $mod+4 workspace 4 output HDMI-0
-bindsym $mod+5 workspace 5 output DVI-D-0
-bindsym $mod+6 workspace 6 output DP-5
-bindsym $mod+7 workspace 7 output HDMI-0
-bindsym $mod+8 workspace 8 output DVI-D-0
-bindsym $mod+9 workspace 9 output DP-5
-bindsym $mod+0 workspace 10 output DP-5
+bindsym $mod+1 workspace 1 output HDMI-1
+bindsym $mod+2 workspace 2 output DVI-D-1
+bindsym $mod+3 workspace 3 output DP-1
+bindsym $mod+4 workspace 4 output HDMI-1
+bindsym $mod+5 workspace 5 output DVI-D-1
+bindsym $mod+6 workspace 6 output DP-1
+bindsym $mod+7 workspace 7 output HDMI-1
+bindsym $mod+8 workspace 8 output DVI-D-1
+bindsym $mod+9 workspace 9 output DP-1
+bindsym $mod+0 workspace 10 output DP-1
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace 1 output HDMI-0
-bindsym $mod+Shift+2 move container to workspace 2 output DVI-D-0
-bindsym $mod+Shift+3 move container to workspace 3 output DP-5
-bindsym $mod+Shift+4 move container to workspace 4 output HDMI-0
-bindsym $mod+Shift+5 move container to workspace 5 output DVI-D-0
-bindsym $mod+Shift+6 move container to workspace 6 output DP-5
-bindsym $mod+Shift+7 move container to workspace 7 output HDMI-0
-bindsym $mod+Shift+8 move container to workspace 8 output DVI-D-0
-bindsym $mod+Shift+9 move container to workspace 9 output DP-5
-bindsym $mod+Shift+0 move container to workspace 10 output DP-5
+bindsym $mod+Shift+1 move container to workspace 1 output HDMI-1
+bindsym $mod+Shift+2 move container to workspace 2 output DVI-D-1
+bindsym $mod+Shift+3 move container to workspace 3 output DP-1
+bindsym $mod+Shift+4 move container to workspace 4 output HDMI-1
+bindsym $mod+Shift+5 move container to workspace 5 output DVI-D-1
+bindsym $mod+Shift+6 move container to workspace 6 output DP-1
+bindsym $mod+Shift+7 move container to workspace 7 output HDMI-1
+bindsym $mod+Shift+8 move container to workspace 8 output DVI-D-1
+bindsym $mod+Shift+9 move container to workspace 9 output DP-1
+bindsym $mod+Shift+0 move container to workspace 10 output DP-1
 
 # Set the Workspaces at the Start
-exec i3-msg workspace 1 output HDMI-0
-exec i3-msg workspace 3 output DP-5
-exec i3-msg workspace 2 output DVI-D-0
+exec i3-msg workspace 1 output HDMI-1
+exec i3-msg workspace 3 output DP-1
+exec i3-msg workspace 2 output DVI-D-1
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -179,15 +180,16 @@ bindsym $mod+Control+Right move workspace to output right
 
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh > polylog
 # exec_always --no-startup-id albert
+exec /usr/local/bin/premid
 
-exec --no-startup-id /opt/nextcloud.AppImage --background
+#exec --no-startup-id /opt/nextcloud.AppImage --background
 
 # Lock screen
 bindsym $mod+l exec xscreensaver-command -l
 exec_always --no-startup-id xscreensaver -no-splash
 
 # Set Resolution
-exec --no-startup-id xrandr --output DVI-D-0 --mode 1920x1080 --primary --output HDMI-0 --left-of DVI-D-0 --mode 1920x1080 --output DP-5 --right-of DVI-D-0 --mode 1920x1080
+exec --no-startup-id xrandr --output DVI-D-1 --mode 1920x1080 --primary  --output DP-1 --mode 1920x1080 --right-of DVI-D-1 --output HDMI-1 --left-of DVI-D-1 --mode 1920x1080
 
 exec_always compton
 
