--- a/config/polybar/config
+++ b/config/polybar/config
@@ -47,17 +47,16 @@ radius = 4
 padding-left = 0
 padding-right = 1
 
-module-margin-left = 1
-module-margin-right = 1
+module-margin-left = 2
+module-margin-right = 2
 
-font-0 = "MesloLGS NF:size=9:antialias=true;2"
+font-0 = "Ubuntu:size=10:antialias=true;2"
 font-1 = "MesloLGS NF:pixelsize=13:antialias=true;3"
 font-2 = "MesloLGS NF:pixelsizesize=15:antialias=true;3"
 
-modules-left = i3 xwindow
+modules-left = i3 packages
 modules-center = calendar
 modules-right = pulseaudio eth power_btn
-
 
 tray-position = right
 tray-padding = 2
@@ -71,10 +70,6 @@ override-redirect = false
 cursor-click = pointer
 cursor-scroll = ns-resize
 
-[module/xwindow]
-type = internal/xwindow
-label = ""%title:0:40:...%""
-
 [module/i3]
 type = internal/i3
 format = <label-state> <label-mode>
@@ -84,18 +79,18 @@ wrapping-scroll = false
 ; Only show workspaces on the same output as the bar
 pin-workspaces = true
 
-label-mode-padding = 1
 label-mode-foreground = #000
 label-mode-background = ${colors.primary}
+label-mode-padding = 1
 
 ; focused = Active workspace on focused monitor
 label-focused = %index%
 label-focused-background = ${colors.primary}
-label-focused-padding = 1
+label-focused-padding = 2
 
 ; unfocused = Inactive workspace on any monitor
 label-unfocused = %index%
-label-unfocused-padding = 1
+label-unfocused-padding = 2
 
 ; visible = Active workspace on unfocused monitor
 label-visible = %index%
@@ -112,20 +107,18 @@ type = internal/network
 interface = enp35s0
 
 format-connected-prefix-foreground = ${colors.on_surface}
-label-connected = "ﰬ%downspeed% ﰵ%upspeed%"
+label-connected = "%{T3}%{T-} %local_ip%"
 
-label-disconnected = No Connection
+label-disconnected = "%{T3}%{T-} No Connection"
 
 [module/pulseaudio]
 type = internal/pulseaudio
 
 format-volume = <ramp-volume> <label-volume>
 
-ramp-volume-0 = "%{T3}%{T-}"
-ramp-volume-1 = "%{T3}%{T-}"
-ramp-volume-2 = "%{T3}%{T-}"
+ramp-volume-0 = "%{T3}%{T-}"
 
-label-volume = "%percentage%%"
+label-volume = " %percentage%%"
 
 # set your standard output. Get all sinks with: 'pactl list short sinks'
 sink = alsa_output.pci-0000_28_00.3.analog-stereo
@@ -136,7 +129,7 @@ label-muted-foreground = #888
 [module/power_btn]
 type = custom/text
 
-content = "⏻"
+content = "%{T3}⏻ %{T-}"
 content-font = 2
 content-background = ${colors.surface}
 content-foreground = ${colors.on_surface}
@@ -147,6 +140,12 @@ click-left = $HOME/.config/polybar/power_menu.sh
 [module/calendar]
 type = custom/script
 exec = ~/.config/polybar/cal.sh
+interval = 5
+click-left = ~/.config/polybar/cal.sh --popup &
+
+[module/packages]
+type = custom/script
+exec = ~/.config/polybar/packages.sh
 interval = 5
 click-left = ~/.config/polybar/cal.sh --popup &
 
