--- a/config/polybar/config
+++ b/config/polybar/config
@@ -45,18 +45,18 @@ border-left-size = 10
 radius = 4
 
 padding-left = 0
-padding-right = 1
+padding-right = 5
 
-module-margin-left = 2
-module-margin-right = 2
+module-margin-left = 3
+module-margin-right = 3
 
 font-0 = "Ubuntu:size=10:antialias=true;2"
 font-1 = "MesloLGS NF:pixelsize=13:antialias=true;3"
 font-2 = "MesloLGS NF:pixelsizesize=15:antialias=true;3"
 
-modules-left = i3 packages
+modules-left = i3
 modules-center = calendar
-modules-right = pulseaudio eth power_btn
+modules-right = cpu memory packages pulseaudio eth power_btn
 
 tray-position = right
 tray-padding = 2
@@ -69,6 +69,18 @@ override-redirect = false
 
 cursor-click = pointer
 cursor-scroll = ns-resize
+
+[module/memory]
+type = internal/memory
+interval = 3
+
+label = "%{T3}%{T1} %percentage_used%%"
+
+[module/cpu]
+type = internal/cpu
+interval = 1
+
+label = "%{T3}%{T1} %percentage%%"
 
 [module/i3]
 type = internal/i3
@@ -129,7 +141,7 @@ label-muted-foreground = #888
 [module/power_btn]
 type = custom/text
 
-content = "%{T3}⏻ %{T-}"
+content = "%{T3}⏻%{T-}"
 content-font = 2
 content-background = ${colors.surface}
 content-foreground = ${colors.on_surface}
@@ -146,8 +158,7 @@ click-left = ~/.config/polybar/cal.sh --popup &
 [module/packages]
 type = custom/script
 exec = ~/.config/polybar/packages.sh
-interval = 5
-click-left = ~/.config/polybar/cal.sh --popup &
+interval = 500
 
 [settings]
 screenchange-reload = true
