--- a/settings.json
+++ b/settings.json
@@ -1,20 +1,36 @@
 {
-    "files.autoSave": "afterDelay",
+    "files.autoSave": "onFocusChange",
     "editor.renderWhitespace": "all",
     "editor.renderFinalNewline": true,
     "editor.renderControlCharacters": true,
-    "editor.renderIndentGuides": true,
     "workbench.editor.wrapTabs": true,
     "editor.rulers": [
+        80,
         120
     ],
-    "explorer.compactFolders": false,
     "files.eol": "\n",
     "workbench.tree.indent": 20,
     "workbench.tree.renderIndentGuides": "always",
-    "workbench.colorTheme": "Darcula",
+    "workbench.colorTheme": "Darcula Theme from IntelliJ",
     "editor.tabSize": 2,
     "typescript.updateImportsOnFileMove.enabled": "always",
     "cSpell.language": "en,de-DE,en-GB,en-US,de",
-    "editor.wordWrap": "on"
+    "editor.wordWrap": "on",
+    "editor.guides.indentation": true,
+    "javascript.updateImportsOnFileMove.enabled": "always",
+    "extensions.ignoreRecommendations": true,
+    "template-string-converter.addBracketsToProps": true,
+    "javascript.format.semicolons": "insert",
+    "javascript.inlayHints.functionLikeReturnTypes.enabled": true,
+    "javascript.inlayHints.parameterNames.enabled": "all",
+    "javascript.inlayHints.parameterTypes.enabled": true,
+    "javascript.inlayHints.propertyDeclarationTypes.enabled": true,
+    "javascript.preferences.quoteStyle": "single",
+    "typescript.preferences.quoteStyle": "single",
+    "redhat.telemetry.enabled": true,
+    "workbench.iconTheme": "material-icon-theme",
+    "explorer.compactFolders": true,
+    "explorer.decorations.badges": false,
+    "material-icon-theme.hidesExplorerArrows": true,
+    "material-icon-theme.folders.theme": "classic",
 }
