Update vscode settings

--- a/settings.json
+++ b/settings.json
@@ -1,17 +1,17 @@
 {
     "files.autoSave": "onFocusChange",
     "editor.renderWhitespace": "all",
-    "editor.renderFinalNewline": true,
+    "editor.renderFinalNewline": "on",
     "editor.renderControlCharacters": true,
-    "workbench.editor.wrapTabs": true,
+    "workbench.editor.wrapTabs": false,
     "editor.rulers": [
         80,
         120
     ],
     "files.eol": "\n",
-    "workbench.tree.indent": 20,
+    "workbench.tree.indent": 22,
     "workbench.tree.renderIndentGuides": "always",
-    "workbench.colorTheme": "Darcula Theme from IntelliJ",
+    "workbench.editor.showTabs": false,
     "editor.tabSize": 2,
     "typescript.updateImportsOnFileMove.enabled": "always",
     "cSpell.language": "en,de-DE,en-GB,en-US,de",
@@ -27,10 +27,25 @@
     "javascript.inlayHints.propertyDeclarationTypes.enabled": true,
     "javascript.preferences.quoteStyle": "single",
     "typescript.preferences.quoteStyle": "single",
-    "redhat.telemetry.enabled": true,
-    "workbench.iconTheme": "material-icon-theme",
-    "explorer.compactFolders": true,
     "explorer.decorations.badges": false,
     "material-icon-theme.hidesExplorerArrows": true,
     "material-icon-theme.folders.theme": "classic",
+    "workbench.iconTheme": "material-icon-theme",
+    "auto-close-tag.activationOnLanguage": [
+        "javascriptreact",
+        "typescriptreact",
+        "html"
+    ],
+    "redhat.telemetry.enabled": true,
+    "workbench.colorTheme": "Gruvbox Dark Hard",
+    "editor.lineNumbers": "relative",
+    "workbench.editor.limit.value": 1,
+    "editor.minimap.enabled": false,
+    "workbench.activityBar.visible": false,
+    "workbench.editor.enablePreview": false,
+    "workbench.layoutControl.enabled": false,
+    "window.title": "${dirty}${activeEditorLong}",
+    "workbench.tips.enabled": false,
+    "workbench.editor.limit.enabled": true,
+    "breadcrumbs.enabled": false
 }
