--- a/home/.config/i3/config
+++ b/home/.config/i3/config
@@ -40,15 +40,13 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # Move focused window, but with VIM curser keys
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
+bindsym $mod+Shift+h move left
+bindsym $mod+Shift+j move down
+bindsym $mod+Shift+k move up
+bindsym $mod+Shift+l move right
 
-# split in horizontal orientation
-bindsym $mod+h split h
-# split in vertical orientation
-bindsym $mod+v split v
+# toggle window splitting
+bindsym $mod+v split toggle
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
@@ -66,9 +64,8 @@ bindsym $mod+space focus mode_toggle
 
 # focus the parent container
 bindsym $mod+a focus parent
-
 # focus the child container
-bindsym $mod+d focus child
+#bindsym $mod+d focus child
 
 # switch to workspace
 bindsym $mod+1 workspace 1
@@ -133,8 +130,8 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 # Color settings
-set $fg     #1d2021
-set $bg     #fbf1c7
+set $fg     #fbf1c7
+set $bg     #1d2021
 set $prim   #83a598
 set $warn   #fb4934
 
@@ -173,7 +170,7 @@ bindsym $mod+shift+s exec gnome-screenshot -ai
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 # Lock screen
-bindsym $mod+Shift+l exec i3lock -f -c 282828
+bindsym Control+Shift+l exec i3lock -f -c 282828
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --no-fork -f -c 282828
 
 # Start gnome-keyring-daemon, used for ssh or something,
