update dotfiles script

--- a/home/.config/compton.conf
+++ b/home/.config/compton.conf
@@ -123,7 +123,7 @@ blur-kern = "7,7,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1
 # Weak blur
 #blur-kern = "3,3,1,1,1,1,1,1,1,1"
 
-
+# lol
 #Window type settings
 # TODO
 #wintypes:
