--- a/home/.config/polybar/config
+++ b/home/.config/polybar/config
@@ -174,6 +174,8 @@ battery = BAT0
 adapter = AC
 poll-interwal = 20
 
+label-full = %{T4}%{T-} %percentage%%
+
 format-charging = <ramp-capacity> <label-charging>
 label-charging = "%{T4}%{T-} %percentage%%"
 
